--- a/main.ipynb
+++ b/main.ipynb
@@ -80,9 +80,9 @@
     "#     connection.execute(insert_stmt)\n",
     "\n",
     "#Deletar registro especifico na tabela\n",
-    "with engine.begin() as connection:\n",
-    "    delete_stmt = \"DELETE dbo.ClientesTeste WHERE Subgrupo = 'GrupoKLX' \"\n",
-    "    connection.execute(delete_stmt)    \n",
+    "# with engine.begin() as connection:\n",
+    "#     delete_stmt = \"DELETE dbo.ClientesTeste WHERE Subgrupo = 'GrupoKLX' \"\n",
+    "#     connection.execute(delete_stmt)    \n",
     "\n",
     "\n",
     "# Seleciona valores na tabela    \n",
