--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,27 +30,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "     Cliente    Subgrupo\n",
-      "0   Cliente1      GrupoZ\n",
-      "1   Cliente2      GrupoZ\n",
-      "2   Cliente3      GrupoB\n",
-      "3   Cliente4      GrupoC\n",
-      "4   Cliente5      GrupoC\n",
-      "5   Cliente6      GrupoY\n",
-      "6   Cliente6      GrupoY\n",
-      "7   Cliente6      GrupoY\n",
-      "8   Cliente7      GrupoY\n",
-      "9   Cliente6      GrupoY\n",
-      "10  Cliente8  GrupoKZZZX\n",
-      "11  Cliente6      GrupoY\n",
-      "12  Cliente6      GrupoY\n"
+      "      Cliente    Subgrupo\n",
+      "0    Cliente1      GrupoZ\n",
+      "1    Cliente2      GrupoZ\n",
+      "2    Cliente3      GrupoB\n",
+      "3    Cliente4      GrupoC\n",
+      "4    Cliente5      GrupoC\n",
+      "5    Cliente6      GrupoY\n",
+      "6    Cliente6      GrupoY\n",
+      "7    Cliente6      GrupoY\n",
+      "8    Cliente7      GrupoY\n",
+      "9    Cliente6      GrupoY\n",
+      "10   Cliente8  GrupoKZZZX\n",
+      "11   Cliente6      GrupoY\n",
+      "12   Cliente6      GrupoY\n",
+      "13  Cliente17      GrupoP\n"
      ]
     }
    ],
@@ -75,9 +76,9 @@
     "#     update_stmt = \"UPDATE dbo.ClientesTeste SET Subgrupo = 'GrupoZ' WHERE Subgrupo = 'GrupoA'\"\n",
     "#     connection.execute(update_stmt)\n",
     "\n",
-    "# with engine.begin() as connection:\n",
-    "#     insert_stmt = \"INSERT INTO dbo.ClientesTeste (Cliente, Subgrupo) VALUES ('Cliente17', 'GrupoP')\"\n",
-    "#     connection.execute(insert_stmt)\n",
+    "with engine.begin() as connection:\n",
+    "    insert_stmt = \"INSERT INTO dbo.ClientesTeste (Cliente, Subgrupo) VALUES ('Cliente17', 'GrupoP')\"\n",
+    "    connection.execute(insert_stmt)\n",
     "\n",
     "#Deletar registro especifico na tabela\n",
     "# with engine.begin() as connection:\n",
