--- a/main.ipynb
+++ b/main.ipynb
@@ -30,28 +30,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "      Cliente    Subgrupo\n",
-      "0    Cliente1      GrupoZ\n",
-      "1    Cliente2      GrupoZ\n",
-      "2    Cliente3      GrupoB\n",
-      "3    Cliente4      GrupoC\n",
-      "4    Cliente5      GrupoC\n",
-      "5    Cliente6      GrupoY\n",
-      "6    Cliente6      GrupoY\n",
-      "7    Cliente6      GrupoY\n",
-      "8    Cliente7      GrupoY\n",
-      "9    Cliente6      GrupoY\n",
-      "10   Cliente8  GrupoKZZZX\n",
-      "11   Cliente6      GrupoY\n",
-      "12   Cliente6      GrupoY\n",
-      "13  Cliente17      GrupoP\n"
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (1377354369.py, line 25)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  Cell \u001b[1;32mIn[6], line 25\u001b[1;36m\u001b[0m\n\u001b[1;33m    Deletar registro especifico na tabela\u001b[0m\n\u001b[1;37m            ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
@@ -80,9 +67,9 @@
     "    insert_stmt = \"INSERT INTO dbo.ClientesTeste (Cliente, Subgrupo) VALUES ('Cliente17', 'GrupoP')\"\n",
     "    connection.execute(insert_stmt)\n",
     "\n",
-    "#Deletar registro especifico na tabela\n",
+    "# Deletar registro especifico na tabela\n",
     "# with engine.begin() as connection:\n",
-    "#     delete_stmt = \"DELETE dbo.ClientesTeste WHERE Subgrupo = 'GrupoKLX' \"\n",
+    "#     delete_stmt = \"DELETE dbo.ClientesTeste WHERE Subgrupo = 'GrupoP' \"\n",
     "#     connection.execute(delete_stmt)    \n",
     "\n",
     "\n",
